Edit a completed contraction and some style updates (#34)
* Add sentry

* backend code for updating contractions

* Add route for updating contractions

* Add modal for updating contractions

* white bg and no dark mode

* update pricing icon
