# backend/app/presentation/api/schemas/requests/contraction.py
@@ -13,3 +13,11 @@ class EndContractionRequest(BaseModel):
     intensity: int
     end_time: datetime | None = None
     notes: str | None = None
+
+
+class UpdateContractionRequest(BaseModel):
+    contraction_id: str
+    start_time: datetime | None = None
+    end_time: datetime | None = None
+    intensity: int | None = None
+    notes: str | None = None
